--- a/JiaoBaoYun-hb/html/cloud/app_statistics.html
+++ b/JiaoBaoYun-hb/html/cloud/app_statistics.html
@@ -393,7 +393,7 @@
 					var html_name = 'mui-ellipsis';
 					//有点到记事数据
 					if(data[i].Notes.length != 0) {
-						html_name = 'mui-ellipsis mui-table-view-cell';
+						html_name = 'mui-ellipsis mui-table-view-cell not-zero-num';
 					}
 					var element = document.createElement('tr');
 					//1 正常2 旷课3 迟到4 早退5请假6 其他
