--- a/JiaoBaoYun-hb/html/mine/apply-bycode1.html
+++ b/JiaoBaoYun-hb/html/mine/apply-bycode1.html
@@ -18,11 +18,11 @@
 			<h1 class="mui-title">扫描结果</h1>
 		</header>
 		<div class="mui-content mui-fullscreen">
-			<div class="group-info" style="width: 100%; margin-top: 50%;text-align: center;">
-				<div class="dated-code" style="width: 50%;margin-left: 25%; min-height: 100px;display: none;" >
+			<div class="group-info" style="width: 100%; text-align: center;">
+				<div class="dated-code" style="width: 50%;margin-left: 25%;margin-top: 50%; min-height: 100px;display: none;" >
 					<span  class="iconfont icon-jinggao-copy" style="color: red;font-size: 100px;line-height: 50px;"></span>
 				</div>
-				<h5 id="group-info" class="">二维码已过期</h5>
+				<h5 id="group-info" style="word-wrap: break-word;">二维码已过期</h5>
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
